--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 <div class="content">
-    <h1 style="text-align: center">Youtube Video Data Scrapper</h1>
+    <h1 style="text-align: center">Youtube Video Data Scrapper - Utkarsh Gaikwad</h1>
 
     <div class="form">
         <form action="/ytdata" method="POST">
